--- a/lab_report/photon_statistics.tex
+++ b/lab_report/photon_statistics.tex
@@ -34,7 +34,7 @@ The average number of photons is given by \(\overline{n} = \abs{\alpha }^2\), an
 \,.
 \end{align}
 
-\textbf{Thermal light}, on the other hand, has the distribution we would expect to see if, for instance, we had a bath of atoms in thermal equilibrium with radiation and a transition with energy \(\hbar \omega \)\cite[section 14.4]{salehFundamentalsPhotonics}.
+\textbf{Thermal light}, on the other hand, has the distribution we would expect to see if, for instance, we had a bath of atoms in thermal equilibrium with radiation and a transition with energy \(\hbar \omega \)  \cite[section 14.4]{salehFundamentalsPhotonics}.
 
 The distribution describing this situation is the Boltzmann one: 
 %
@@ -119,7 +119,8 @@ The first kind of analysis one can do is to fit the corresponding distribution t
 \label{fig:100.0us}
 \end{figure}
 
-In figures \ref{fig:1.0us}, \ref{fig:10.0us} and \ref{fig:100.0us} we show the plots we find with a few different window sizes. The histogram is from the data, the line comes from the theoretical distribution computed by fixing the mean to be equal to that of the data.
+In figures \ref{fig:1.0us}, \ref{fig:10.0us} and \ref{fig:100.0us} we show the plots we find with a few different window size possibilities.
+The histogram is from the data, the line comes from the theoretical distribution computed by fixing the mean to be equal to that of the data.
 
 We can see that with window sizes of the order of \SI{10}{\micro s} the distribution is close to the theoretical one and the coherent and thermal ones look quite different; for smaller windows we start to rarely see even a single photon per window, for larger ones the mode of the ``thermal'' distribution shifts from zero.
 
