--- a/lab_report/quantum_optics.bib
+++ b/lab_report/quantum_optics.bib
@@ -30,12 +30,12 @@
   url = {http://arxiv.org/abs/1303.2849},
   urldate = {2020-03-27},
   abstract = {Bell's 1964 theorem, which states that the predictions of quantum theory cannot be accounted for by any local theory, represents one of the most profound developments in the foundations of physics. In the last two decades, Bell's theorem has been a central theme of research from a variety of perspectives, mainly motivated by quantum information science, where the nonlocality of quantum theory underpins many of the advantages afforded by a quantum processing of information. The focus of this review is to a large extent oriented by these later developments. We review the main concepts and tools which have been developed to describe and study the nonlocality of quantum theory, and which have raised this topic to the status of a full sub-field of quantum information science.},
-  annotation = {Comment: 65 pages, 7 figures. Final version},
   archivePrefix = {arXiv},
   eprint = {1303.2849},
   eprinttype = {arxiv},
   file = {/home/jacopo/zotero/storage/QDB7GNHE/Brunner et al. - 2014 - Bell nonlocality.pdf;/home/jacopo/zotero/storage/Z6QL5ZVI/1303.html},
   keywords = {Quantum Physics},
+  note = {Comment: 65 pages, 7 figures. Final version},
   number = {2}
 }
 
@@ -75,6 +75,23 @@
   issue = {7575},
   langid = {english},
   number = {7575}
+}
+
+@article{jamesMeasurementQubits2001,
+  title = {Measurement of Qubits},
+  author = {James, Daniel F. V. and Kwiat, Paul G. and Munro, William J. and White, Andrew G.},
+  date = {2001-10-16},
+  journaltitle = {Physical Review A},
+  shortjournal = {Phys. Rev. A},
+  volume = {64},
+  pages = {052312},
+  publisher = {{American Physical Society}},
+  doi = {10.1103/PhysRevA.64.052312},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.64.052312},
+  urldate = {2020-06-02},
+  abstract = {We describe in detail the theory underpinning the measurement of density matrices of a pair of quantum two-level systems (“qubits”). Our particular emphasis is on qubits realized by the two polarization degrees of freedom of a pair of entangled photons generated in a down-conversion experiment; however, the discussion applies in general, regardless of the actual physical realization. Two techniques are discussed, namely, a tomographic reconstruction (in which the density matrix is linearly related to a set of measured quantities) and a maximum likelihood technique which requires numerical optimization (but has the advantage of producing density matrices that are always non-negative definite). In addition, a detailed error analysis is presented, allowing errors in quantities derived from the density matrix, such as the entropy or entanglement of formation, to be estimated. Examples based on down-conversion experiments are used to illustrate our results.},
+  file = {/home/jacopo/zotero/storage/RV9BHB2I/James et al. - 2001 - Measurement of qubits.pdf;/home/jacopo/zotero/storage/HIFUU6S3/PhysRevA.64.html},
+  number = {5}
 }
 
 @online{MultivariateDensityEstimation,
@@ -117,12 +134,12 @@
   url = {http://arxiv.org/abs/0802.4155},
   urldate = {2020-03-20},
   abstract = {Quantum key distribution (QKD) is the first quantum information task to reach the level of mature technology, already fit for commercialization. It aims at the creation of a secret key between authorized partners connected by a quantum channel and a classical authenticated channel. The security of the key can in principle be guaranteed without putting any restriction on the eavesdropper's power. The first two sections provide a concise up-to-date review of QKD, biased toward the practical side. The rest of the paper presents the essential theoretical tools that have been developed to assess the security of the main experimental platforms (discrete variables, continuous variables and distributed-phase-reference protocols).},
-  annotation = {Comment: Identical to the published version, up to cosmetic editorial changes},
   archivePrefix = {arXiv},
   eprint = {0802.4155},
   eprinttype = {arxiv},
   file = {/home/jacopo/zotero/storage/E4ELPMX2/Scarani et al. - 2009 - The Security of Practical Quantum Key Distribution.pdf;/home/jacopo/zotero/storage/2Y24LXMU/0802.html;/home/jacopo/zotero/storage/8XJSARIM/RevModPhys.81.html},
   keywords = {Quantum Physics},
+  note = {Comment: Identical to the published version, up to cosmetic editorial changes},
   number = {3}
 }
 
@@ -166,8 +183,8 @@
   author = {Tissino, J.},
   date = {2019},
   url = {https://github.com/jacopok/handbooks/blob/master/undergrad/quantum_info/quantum_info.pdf},
-  file = {/home/jacopo/zotero/storage/NXDVFD42/Tissino - 2019 - Quantum Information notes.pdf},
-  note = {Course held by Simone Montangero at the university of Padua}
+  annotation = {Course held by Simone Montangero at the university of Padua},
+  file = {/home/jacopo/zotero/storage/NXDVFD42/Tissino - 2019 - Quantum Information notes.pdf}
 }
 
 
