Did CHSH analysis

--- a/lab_report_2/main.tex
+++ b/lab_report_2/main.tex
@@ -21,9 +21,18 @@ backref=true
 Abstract.
 \end{abstract}
 
+Quantum efficiency of \SI{50}{\percent}.
+Passband filer at \SI{810}{nm}. 
+Jitter at \SI{1}{ns}. 
+Dark count at a few times \SI{100}{Hz}. 
+
+
+
 \subfile{QKD}
+\subfile{bell}
 \subfile{tomography}
 
 \printbibliography
 
 \end{document}
+    
