--- a/lab_report_2/bell.tex
+++ b/lab_report_2/bell.tex
@@ -1,6 +1,8 @@
 \documentclass[main.tex]{subfiles}
 \begin{document}
 
-\section{Quantum Key Distribution}
+\section{Bell inequalities}
+
+
 
 \end{document}
