Did QKD calculation

--- a/lab_report/quantum_optics.bib
+++ b/lab_report/quantum_optics.bib
@@ -17,6 +17,23 @@
   number = {12}
 }
 
+@article{bennettQuantumCryptographyBell1992,
+  title = {Quantum Cryptography without {{Bell}}'s Theorem},
+  author = {Bennett, Charles H. and Brassard, Gilles and Mermin, N. David},
+  date = {1992-02-03},
+  journaltitle = {Physical Review Letters},
+  shortjournal = {Phys. Rev. Lett.},
+  volume = {68},
+  pages = {557--559},
+  publisher = {{American Physical Society}},
+  doi = {10.1103/PhysRevLett.68.557},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.68.557},
+  urldate = {2020-10-21},
+  abstract = {Ekert has described a cryptographic scheme in which Einstein-Podolsky-Rosen (EPR) pairs of particles are used to generate identical random numbers in remote places, while Bell’s theorem certifies that the particles have not been measured in transit by an eavesdropper. We describe a related but simpler EPR scheme and, without invoking Bell’s theorem, prove it secure against more general attacks, including substitution of a fake EPR source. Finally we show our scheme is equivalent to the original 1984 key distribution scheme of Bennett and Brassard, which uses single particles instead of EPR pairs., This article appears in the following collection:},
+  file = {/home/jacopo/zotero/storage/E6HG96YW/PhysRevLett.68.html},
+  number = {5}
+}
+
 @article{brunnerBellNonlocality2014,
   title = {Bell Nonlocality},
   author = {Brunner, Nicolas and Cavalcanti, Daniel and Pironio, Stefano and Scarani, Valerio and Wehner, Stephanie},
