--- a/lab_report/quantum_optics.bib
+++ b/lab_report/quantum_optics.bib
@@ -30,7 +30,7 @@
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.68.557},
   urldate = {2020-10-21},
   abstract = {Ekert has described a cryptographic scheme in which Einstein-Podolsky-Rosen (EPR) pairs of particles are used to generate identical random numbers in remote places, while Bell’s theorem certifies that the particles have not been measured in transit by an eavesdropper. We describe a related but simpler EPR scheme and, without invoking Bell’s theorem, prove it secure against more general attacks, including substitution of a fake EPR source. Finally we show our scheme is equivalent to the original 1984 key distribution scheme of Bennett and Brassard, which uses single particles instead of EPR pairs., This article appears in the following collection:},
-  file = {/home/jacopo/zotero/storage/E6HG96YW/PhysRevLett.68.html},
+  file = {/home/jacopo/zotero/storage/IU9RLIAH/Bennett et al. - 1992 - Quantum cryptography without Bell's theorem.pdf;/home/jacopo/zotero/storage/E6HG96YW/PhysRevLett.68.html},
   number = {5}
 }
 
@@ -139,6 +139,7 @@
 }
 
 @article{scaraniSecurityPracticalQuantum2009,
+  ids = {scaraniSecurityPracticalQuantum2009a},
   title = {The {{Security}} of {{Practical Quantum Key Distribution}}},
   author = {Scarani, Valerio and Bechmann-Pasquinucci, Helle and Cerf, Nicolas J. and Dusek, Miloslav and Lutkenhaus, Norbert and Peev, Momtchil},
   date = {2009-09-29},
@@ -146,6 +147,7 @@
   shortjournal = {Rev. Mod. Phys.},
   volume = {81},
   pages = {1301--1350},
+  publisher = {{American Physical Society}},
   issn = {0034-6861, 1539-0756},
   doi = {10.1103/RevModPhys.81.1301},
   url = {http://arxiv.org/abs/0802.4155},
@@ -154,7 +156,7 @@
   archivePrefix = {arXiv},
   eprint = {0802.4155},
   eprinttype = {arxiv},
-  file = {/home/jacopo/zotero/storage/E4ELPMX2/Scarani et al. - 2009 - The Security of Practical Quantum Key Distribution.pdf;/home/jacopo/zotero/storage/2Y24LXMU/0802.html;/home/jacopo/zotero/storage/8XJSARIM/RevModPhys.81.html},
+  file = {/home/jacopo/zotero/storage/85WP9LUT/Scarani et al. - 2009 - The security of practical quantum key distribution.pdf;/home/jacopo/zotero/storage/E4ELPMX2/Scarani et al. - 2009 - The Security of Practical Quantum Key Distribution.pdf;/home/jacopo/zotero/storage/2Y24LXMU/0802.html;/home/jacopo/zotero/storage/8XJSARIM/RevModPhys.81.html},
   keywords = {Quantum Physics},
   note = {Comment: Identical to the published version, up to cosmetic editorial changes},
   number = {3}
