Wrote QKD ipynb report

--- a/lab_report_2/bell.tex
+++ b/lab_report_2/bell.tex
@@ -3,6 +3,8 @@
 
 \section{Bell inequalities}
 
+The notebook is \url{https://nbviewer.jupyter.org/github/jacopok/quantum_optics/blob/master/bell_test/report_bell_test.ipynb}.
 
+The code for the analysis is in the folder \url{https://github.com/jacopok/quantum_optics/tree/master/bell_test}. 
 
 \end{document}
