--- a/QKD/report_QKD.ipynb
+++ b/QKD/report_QKD.ipynb
@@ -28,14 +28,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
       "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "\n# QKD \n\nThe way coincidences are calculated here is exactly analogous to what was done in the [Bell inequalities](https://nbviewer.jupyter.org/github/jacopok/quantum_optics/blob/master/bell_test/report_bell_test.ipynb) case. \n\n\n"
+      "text/markdown": "\n# QKD \n\nThe way coincidences are calculated here is exactly analogous to what was done in the [Bell inequalities](https://nbviewer.jupyter.org/github/jacopok/quantum_optics/blob/master/bell_test/report_bell_test.ipynb) case. \n\nNow, instead of 16 possibilities we have 8:\nthe multidimensional array of rates is parametrized through the indices\n`basis`, equal to 0 for $H-V$ and to 1 for $A-D$, and `pol_1` and `pol_2`, each going from 0 to 1, to select the polarization choice between either HH, HV, VH, VV or AA, AD, DA, DD.\n"
      },
      "metadata": {}
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
       "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "\nThe QBER is defined as the probability of observing photons in the wrong polarizations.\nAs in the Bell inequalities case, we can compute it through the number counts: \nwe add the rates corresponding to the \"wrong\" combinations (the cross ones: HV, VH or AD, DA).\n"
+      "text/markdown": "\nThe QBER is defined as the probability of observing photons in the wrong polarizations.\nAs in the Bell inequalities case, we can compute it through the number counts: \nwe add the rates corresponding to the \"wrong\" combinations (the cross ones: HV, VH or AD, DA).\n\nFrom this \n"
      },
      "metadata": {}
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -136,6 +136,13 @@
     "\n",
     "print(f'Optimal secret key rate = ({transmission_rate * same_basis_probability * secret_key_probability})Hz')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
