--- a/lab_report_2/QKD.tex
+++ b/lab_report_2/QKD.tex
@@ -3,4 +3,6 @@
 
 \section{Quantum Key Distribution}
 
+Notebook: \url{https://nbviewer.jupyter.org/github/jacopok/quantum_optics/blob/master/QKD/report_QKD.ipynb}.
+
 \end{document}
