Wrote some QI lab report

--- a/bell_test/report_bell_test.ipynb
+++ b/bell_test/report_bell_test.ipynb
@@ -14,8 +14,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.8.6 64-bit",
-   "display_name": "Python 3.8.6 64-bit",
+   "name": "Python 3.8.6 64-bit ('python38env': conda)",
+   "display_name": "Python 3.8.6 64-bit ('python38env': conda)",
    "metadata": {
     "interpreter": {
      "hash": "d55324eb18c54775625b70d0acf23726c6b877bc32c1284a5dab775673b6545a"
@@ -248,6 +248,26 @@
     "sigmas_violation = (CHSH(r).n - 2) / CHSH(r).s\n",
     "\n",
     "print(f'This violates the Bell inequalities by {sigmas_violation:.0f} sigmas')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2.8284271247461903"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 1
+    }
+   ],
+   "source": [
+    "2 * np.sqrt(2)"
    ]
   },
   {
