--- a/lab_report_2/QKD.tex
+++ b/lab_report_2/QKD.tex
@@ -3,6 +3,46 @@
 
 \section{Quantum Key Distribution}
 
-Notebook: \url{https://nbviewer.jupyter.org/github/jacopok/quantum_optics/blob/master/QKD/report_QKD.ipynb}.
+With the same experimental setup as the Bell test, we were able to implement a Quantum Key Distribution entanglement-based scheme, first described by \textcite{bennettQuantumCryptographyBell1992}. 
+
+The two conventional communicators Alice and Bob can achieve a shared secret key by receiving entangled qubits. 
+Two bases are agreed upon, we use the same ones which were used in the Bell inequalities case (\(H-V\) and \(D-A\)).
+They measure each qubit in a randomly-chosen basis, half of the time on average they will happen to choose the same one.
+They can later disclose which bases were used; the results of the measurements in a shared basis then should be a shared message. 
+
+In order to be sure that the qubits have not been tampered with a certain fraction of them should be periodically analyzed publicly: if they manage to retain entanglement (which can be verified, for example, by checking for the violation of Bell inequalities) then they are safe. 
+
+We measured the rate of key transfer which can be achieved by our experimental setup. 
+This is constrained by errors, which can be quantified through the Quantum Bit Error Rate: in the state from before \eqref{eq:epr-state} the probability of detecting \(HV\), \(AD\) and such should be zero, but because of various sources of noise this is not so.
+Then, for the \(H-V\) basis we define 
+%
+\begin{align}
+\text{QBER}(HV) = \mathbb{P}(HV)+ \mathbb{P}(VH)
+\,,
+\end{align}
+%
+and similarly for \(A-D\). 
+The fraction of usable qubits is then calculated as 
+%
+\begin{align}
+r = 
+1
+- h (\text{QBER}(HV))
+- h (\text{QBER}(AD))
+\,,
+\end{align}
+%
+where the function \(h\) comes from considerations about mutual information of Alice and Bob; it is given by 
+%
+\begin{align}
+h (p) = - \qty(p \log_2 p + (1-p) \log_2 (1-p) )
+\,.
+\end{align}
+
+The rate is further halved because of the random choice of basis. With this consideration, we find a rate of approximately \SI{125}{Hz}; this will be further reduced because of the requirement to reserve a fraction of the qubits for entanglement verification.
+
+A Jupyter notebook summarizing the results and analysis can be found at \url{https://github.com/jacopok/quantum_optics/blob/master/QKD/report_QKD.ipynb}.
+
+The full code for the analysis is in the folder \url{https://github.com/jacopok/quantum_optics/tree/master/QKD}.
 
 \end{document}
