--- a/lab_report_2/bell.tex
+++ b/lab_report_2/bell.tex
@@ -1,10 +1,31 @@
 \documentclass[main.tex]{subfiles}
 \begin{document}
 
-\section{Bell inequalities}
+\section{Bell test}
 
-The notebook is \url{https://nbviewer.jupyter.org/github/jacopok/quantum_optics/blob/master/bell_test/report_bell_test.ipynb}.
+% Bell, or CHSH inequalities are 
+A Bell test allows us to experimentally violate a classical inequality, showing that a theory with classical probability (and possibly hidden variables) cannot describe a quantum system --- or, at least, entanglement in the polarizations of photons. 
 
-The code for the analysis is in the folder \url{https://github.com/jacopok/quantum_optics/tree/master/bell_test}. 
+The two photons can be measured in two different bases (denoted as \(x=0\) and \(x=1\) for the first photon, \(y=0\) and \(y=1\) for the second) and can yield two different outcomes, which we associate to the values \(+1\) and \(-1\) when computing expectation values.\footnote{We denote these, instead, as \(0\) and \(1\) when writing results in matrix notation, for consistency with the indexing of vectors.} We can then define 
+%
+\begin{align}
+S = \expval{00} + \expval{01}+ \expval{10} - \expval{11}
+\,,
+\end{align}
+%
+where by \(\expval{ij}\) we mean \(\expval{x=i, y=j}\). 
+
+Classically, it can be shown that \(\abs{S} \leq 2\), while a quantum system can theoretically achieve \(\abs{S} = 2 \sqrt{2} \approx \num{2.82}\). 
+
+The two bases\footnote{They are not bases for the full two-photon Hilbert space, their span only consists of the linear polarizations, which is enough for our purposes. } are chosen to be the ones corresponding to the maximum quantum violation of the inequalities: the first is \(\qty{\ket{H}, \ket{V}}\), while the second is \(\qty{\ket{D}, \ket{A}}\), where the states \(\ket{A}\) and \(\ket{D}\) are defined as \(\qty(\ket{H} \pm \ket{V}) / \sqrt{2}\). 
+Measurements are performed by selecting one of these four vectors for each of the photons (so, performing \(4^2\) measurements for all the combinations) through a half-wave plate and counting the number of photons being detected after it per unit time. 
+
+The detection numbers are turned into expectation values by estimating probabilities through their corresponding relative frequencies, and then computing \(\expval{x} = \sum_i x_i \mathbb{P}(x_i)\). 
+
+Experimentally, with this method we achieved \(\abs{S} = \num{2.597(15)}\).
+
+An explanation of how the data was analyzed, going from the list of the arrival times to the Bell inequality violation, can be found in a Jupyter notebook at \url{https://nbviewer.jupyter.org/github/jacopok/quantum_optics/blob/master/bell_test/report_bell_test.ipynb}.
+
+The code for the analysis can be found in the folder \url{https://github.com/jacopok/quantum_optics/tree/master/bell_test}. 
 
 \end{document}
