QO lab report update

--- a/QKD/report_QKD.ipynb
+++ b/QKD/report_QKD.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -54,11 +54,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "HH: (350+/-5)Hz\nHV: (2.1+/-0.4)Hz\nVH: (5.4+/-0.6)Hz\nVV: (348+/-4)Hz\nAA: (351+/-5)Hz\nAD: (11.7+/-0.6)Hz\nDA: (9.7+/-0.7)Hz\nDD: (339+/-4)Hz\n[[[350.39192197439604+/-4.999989798094076\n   2.066886381808053+/-0.3653773441296505]\n  [5.430754878172893+/-0.5661953356549106\n   347.5832976117349+/-4.0737390818457095]]\n\n [[350.6528852344143+/-4.68370580582379\n   11.713315465776578+/-0.5521709864018588]\n  [9.73167542328069+/-0.7356455145714269\n   338.9756865661347+/-3.7193974213980847]]]\n[[['HH' 'HV']\n  ['VH' 'VV']]\n\n [['AA' 'AD']\n  ['DA' 'DD']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "from analysis import compute_rates\n",
+    "from analysis import compute_rates, names\n",
     "\n",
     "# here is the code for the computation of all the rates\n",
     "\n",
@@ -67,12 +75,15 @@
     "\n",
     "# the computation takes a couple minutes, so we load from a precalculated file instead\n",
     "\n",
-    "r = np.load('r.npy', allow_pickle=True)"
+    "r = np.load('r.npy', allow_pickle=True)\n",
+    "\n",
+    "for x in (it := np.nditer(r, flags=['multi_index', 'refs_ok'])):\n",
+    "    print(f'{names[it.multi_index]}: ({x})Hz')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
