--- a/QKD/report_QKD.ipynb
+++ b/QKD/report_QKD.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -54,14 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "HH: (350+/-5)Hz\nHV: (2.1+/-0.4)Hz\nVH: (5.4+/-0.6)Hz\nVV: (348+/-4)Hz\nAA: (351+/-5)Hz\nAD: (11.7+/-0.6)Hz\nDA: (9.7+/-0.7)Hz\nDD: (339+/-4)Hz\n[[[350.39192197439604+/-4.999989798094076\n   2.066886381808053+/-0.3653773441296505]\n  [5.430754878172893+/-0.5661953356549106\n   347.5832976117349+/-4.0737390818457095]]\n\n [[350.6528852344143+/-4.68370580582379\n   11.713315465776578+/-0.5521709864018588]\n  [9.73167542328069+/-0.7356455145714269\n   338.9756865661347+/-3.7193974213980847]]]\n[[['HH' 'HV']\n  ['VH' 'VV']]\n\n [['AA' 'AD']\n  ['DA' 'DD']]]\n"
+      "HH: (350+/-5)Hz\nHV: (2.1+/-0.4)Hz\nVH: (5.4+/-0.6)Hz\nVV: (348+/-4)Hz\nAA: (351+/-5)Hz\nAD: (11.7+/-0.6)Hz\nDA: (9.7+/-0.7)Hz\nDD: (339+/-4)Hz\n"
      ]
     }
    ],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -154,13 +154,6 @@
     "\n",
     "print(f'Optimal secret key rate = ({transmission_rate * same_basis_probability * secret_key_probability})Hz')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
