Improved notebooks and cleaned code a bit

--- a/QKD/report_QKD.ipynb
+++ b/QKD/report_QKD.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -77,20 +77,20 @@
     "\n",
     "r = np.load('r.npy', allow_pickle=True)\n",
     "\n",
-    "for x in (it := np.nditer(r, flags=['multi_index', 'refs_ok'])):\n",
-    "    print(f'{names[it.multi_index]}: ({x})Hz')"
+    "for i, x in np.ndenumerate(r):\n",
+    "    print(f'{names[i]}: ({x})Hz')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
       "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "\nThe QBER is defined as the probability of observing photons in the wrong polarizations.\nAs in the Bell inequalities case, we can compute it through the number counts: \nwe add the rates corresponding to the \"wrong\" combinations (the cross ones: HV, VH or AD, DA).\n\nFrom this \n"
+      "text/markdown": "\nThe QBER is defined as the probability of observing photons in the wrong polarizations.\nAs in the Bell inequalities case, we can compute it through the number counts: \nwe add the rates corresponding to the \"wrong\" combinations (the cross ones: HV, VH or AD, DA) and normalize by the total counts in the corresponding basis.\n\nFrom this we compute the QBER, which factors into the determination of the key rate. \nWe then compute the average rate of transmission by considering the rate of detections (in Hz), the key rate (a number $\\in (0,1)$) and the probability of using the same basis.  \n"
      },
      "metadata": {}
     }
@@ -100,21 +100,15 @@
     "\n",
     "The QBER is defined as the probability of observing photons in the wrong polarizations.\n",
     "As in the Bell inequalities case, we can compute it through the number counts: \n",
-    "we add the rates corresponding to the \"wrong\" combinations (the cross ones: HV, VH or AD, DA).\n",
+    "we add the rates corresponding to the \"wrong\" combinations (the cross ones: HV, VH or AD, DA) and normalize by the total counts in the corresponding basis.\n",
     "\n",
-    "From this "
+    "From this we compute the QBER, which factors into the determination of the key rate. \n",
+    "We then compute the average rate of transmission by considering the rate of detections (in Hz), the key rate (a number $\\in (0,1)$) and the probability of using the same basis.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
