--- a/lab_report/quantum_optics.bib
+++ b/lab_report/quantum_optics.bib
@@ -17,6 +17,23 @@
   number = {12}
 }
 
+@article{bellProblemHiddenVariables1966,
+  title = {On the {{Problem}} of {{Hidden Variables}} in {{Quantum Mechanics}}},
+  author = {BELL, JOHN S.},
+  date = {1966-07-01},
+  journaltitle = {Reviews of Modern Physics},
+  shortjournal = {Rev. Mod. Phys.},
+  volume = {38},
+  pages = {447--452},
+  publisher = {{American Physical Society}},
+  doi = {10.1103/RevModPhys.38.447},
+  url = {https://link.aps.org/doi/10.1103/RevModPhys.38.447},
+  urldate = {2020-10-25},
+  abstract = {The demonstrations of von Neumann and others, that quantum mechanics does not permit a hidden variable interpretation, are reconsidered. It is shown that their essential axioms are unreasonable. It is urged that in further examination of this problem an interesting axiom would be that mutually distant systems are independent of one another.},
+  file = {/home/jacopo/zotero/storage/3VHSYRSA/BELL - 1966 - On the Problem of Hidden Variables in Quantum Mech.pdf;/home/jacopo/zotero/storage/N43DAUHL/RevModPhys.38.html},
+  number = {3}
+}
+
 @article{bennettQuantumCryptographyBell1992,
   title = {Quantum Cryptography without {{Bell}}'s Theorem},
   author = {Bennett, Charles H. and Brassard, Gilles and Mermin, N. David},
@@ -54,6 +71,40 @@
   keywords = {Quantum Physics},
   note = {Comment: 65 pages, 7 figures. Final version},
   number = {2}
+}
+
+@article{clauserProposedExperimentTest1969,
+  title = {Proposed {{Experiment}} to {{Test Local Hidden}}-{{Variable Theories}}},
+  author = {Clauser, John F. and Horne, Michael A. and Shimony, Abner and Holt, Richard A.},
+  date = {1969-10-13},
+  journaltitle = {Physical Review Letters},
+  shortjournal = {Phys. Rev. Lett.},
+  volume = {23},
+  pages = {880--884},
+  publisher = {{American Physical Society}},
+  doi = {10.1103/PhysRevLett.23.880},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.23.880},
+  urldate = {2020-10-25},
+  abstract = {A theorem of Bell, proving that certain predictions of quantum mechanics are inconsistent with the entire family of local hidden-variable theories, is generalized so as to apply to realizable experiments. A proposed extension of the experiment of Kocher and Commins, on the polarization correlation of a pair of optical photons, will provide a decisive test between quantum mechanics and local hidden-variable theories.},
+  file = {/home/jacopo/zotero/storage/UKJ29NNP/Clauser et al. - 1969 - Proposed Experiment to Test Local Hidden-Variable .pdf;/home/jacopo/zotero/storage/2FYRUWY9/PhysRevLett.23.html},
+  number = {15}
+}
+
+@article{einsteinCanQuantumMechanicalDescription1935,
+  title = {Can {{Quantum}}-{{Mechanical Description}} of {{Physical Reality Be Considered Complete}}?},
+  author = {Einstein, A. and Podolsky, B. and Rosen, N.},
+  date = {1935-05-15},
+  journaltitle = {Physical Review},
+  shortjournal = {Phys. Rev.},
+  volume = {47},
+  pages = {777--780},
+  publisher = {{American Physical Society}},
+  doi = {10.1103/PhysRev.47.777},
+  url = {https://link.aps.org/doi/10.1103/PhysRev.47.777},
+  urldate = {2020-10-25},
+  abstract = {In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
+  file = {/home/jacopo/zotero/storage/4B5TUTMB/Einstein et al. - 1935 - Can Quantum-Mechanical Description of Physical Rea.pdf},
+  number = {10}
 }
 
 @article{grangierExperimentalEvidencePhoton1986,
