--- a/lab_report_2/bell.tex
+++ b/lab_report_2/bell.tex
@@ -15,7 +15,7 @@ S = \expval{00} + \expval{01}+ \expval{10} - \expval{11}
 %
 where by \(\expval{ij}\) we mean \(\expval{x=i, y=j}\). 
 
-Classically, it can be shown that \(\abs{S} \leq 2\), while a quantum system can theoretically achieve \(\abs{S} = 2 \sqrt{2} \approx \num{2.82}\). 
+Classically, it can be shown \cite[]{clauserProposedExperimentTest1969} that \(\abs{S} \leq 2\), while a quantum system can theoretically achieve \(\abs{S} = 2 \sqrt{2} \approx \num{2.82}\). 
 
 The two bases\footnote{They are not bases for the full two-photon Hilbert space, their span only consists of the linear polarizations, which is enough for our purposes. } are chosen to be the ones corresponding to the maximum quantum violation of the inequalities: the first is \(\qty{\ket{H}, \ket{V}}\), while the second is \(\qty{\ket{D}, \ket{A}}\), where the states \(\ket{A}\) and \(\ket{D}\) are defined as \(\qty(\ket{H} \pm \ket{V}) / \sqrt{2}\). 
 Measurements are performed by selecting one of these four vectors for each of the photons (so, performing \(4^2\) measurements for all the combinations) through a half-wave plate and counting the number of photons being detected after it per unit time. 
