Updated nb's and report

--- a/QKD/report_QKD.ipynb
+++ b/QKD/report_QKD.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,13 +77,14 @@
     "\n",
     "r = np.load('r.npy', allow_pickle=True)\n",
     "\n",
+    "# measured rates in the eight polarization configurations\n",
     "for i, x in np.ndenumerate(r):\n",
     "    print(f'{names[i]}: ({x})Hz')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -108,14 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "QBER for the H-V basis: 0.0106+/-0.0010\nQBER for the A-D basis: 0.0302+/-0.0013\nSecret key probability = 0.720+/-0.009\nTransmission rate = (346.9+/-2.2)Hz\nOptimal secret key rate = (124.9+/-1.8)Hz\n"
+      "QBER for the H-V basis: 0.0106+/-0.0010\nQBER for the A-D basis: 0.0302+/-0.0013\nSecret key rate = 0.720+/-0.009\nTransmission rate = (346.9+/-2.2)Hz\nOptimal secret key rate in bits per second = (124.9+/-1.8)Hz\n"
      ]
     }
    ],
@@ -132,9 +133,9 @@
     "# binary entropy for the probability q\n",
     "h = lambda q : - (q * log(q) + (1-q) * log(1-q)) / log(2)\n",
     "\n",
-    "secret_key_probability = 1 - h(QBER_HV) - h(QBER_AD)\n",
+    "secret_key_rate = 1 - h(QBER_HV) - h(QBER_AD)\n",
     "\n",
-    "print(f'Secret key probability = {secret_key_probability}')\n",
+    "print(f'Secret key rate = {secret_key_rate}')\n",
     "\n",
     "# average the rates for HH, VV, AA, DD\n",
     "transmission_rate = np.sum(np.trace(r, axis1=1, axis2=2)) / 4\n",
@@ -146,7 +147,7 @@
     "# and the pair will be discarded\n",
     "same_basis_probability = .5 \n",
     "\n",
-    "print(f'Optimal secret key rate = ({transmission_rate * same_basis_probability * secret_key_probability})Hz')"
+    "print(f'Optimal secret key rate in bits per second = ({transmission_rate * same_basis_probability * secret_key_rate})Hz')"
    ]
   },
   {
