--- a/lab_report_2/main.tex
+++ b/lab_report_2/main.tex
@@ -17,6 +17,11 @@ backref=true
 
 \maketitle
 
+\begin{abstract}
+We use an optical bench set up for the generation and measurement of polarization-entangled photon pairs in order to first violate the Bell inequalities, and then to build a prototype for a Quantum Key Distribution protocol, whose maximum key rate is estimated. 
+\end{abstract}
+
+
 \subfile{setup}
 \subfile{bell}
 \subfile{QKD}
