--- a/lab_report_2/setup.tex
+++ b/lab_report_2/setup.tex
@@ -23,6 +23,11 @@ The polarizations of these two photons are entangled: their state is
 %
 where \(\ket{H}\) or \(\ket{V}\) denotes the horizontal or vertical polarization of a photon. 
 
-These two photons then each pass through a half-wave plate, which selects a (linear) polarization to project the state along.
+These two photons then each pass through a half-wave plate and a Polarizing Beam Splitter: this pair of components selects a (linear) polarization to project the state along, since the half-wave plate rotates the polarization by a certain angle, while the PBS transmits only photons with a certain polarization (say, \(H\)).
+The reflected photons are discarded in this setup. 
+
+In order to measure along the polarization \(\cos \theta \ket{H} + \sin \theta \ket{V}\) we must rotate the polarization of the photons by an angle \(\theta \), which is achieved by rotating the half-wave plate by an angle \(\theta /2\). 
+
+After the PBS, the photons reach a single-photon detector, which measures their arrival time with a jitter of approximately \SI{1}{ns}, a quantum efficiency (probability that a specific photon is detected) of approximately \SI{50}{\percent}, and a dark count of approximately \SI{100}{Hz}. 
 
 \end{document}
