Updated lab report

--- a/lab_report_2/bell.tex
+++ b/lab_report_2/bell.tex
@@ -26,7 +26,7 @@ The detection numbers are turned into expectation values by estimating probabili
 
 Experimentally, with this method we achieved \(\abs{S} = \num{2.597(15)}\).
 
-An explanation of how the data was analyzed, going from the list of the arrival times to the Bell inequality violation, can be found in a Jupyter notebook at \url{https://nbviewer.jupyter.org/github/jacopok/quantum_optics/blob/master/bell_test/report_bell_test.ipynb}.
+An explanation of how the data was analyzed, going from the list of the arrival times to the Bell inequality violation, can be found in a Jupyter notebook at \url{https://github.com/jacopok/quantum_optics/blob/master/bell_test/report_bell_test.ipynb}.
 
 The code for the analysis can be found in the folder \url{https://github.com/jacopok/quantum_optics/tree/master/bell_test}. 
 
